--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "node-sass": "^7.0.0",
     "npm": "^8.2.0",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "slick-carousel": "^1.8.1"
   }
 }
