--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-uglify-es": "^3.0.0",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "mixitup": "^3.3.1",
     "node-sass": "^7.0.0",
     "npm": "^8.2.0",
     "sass": "^1.44.0",
