--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mixitup": "^3.3.1",
     "node-sass": "^7.0.0",
     "npm": "^8.2.0",
+    "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.44.0",
     "slick-carousel": "^1.8.1"
   }
